# pypinergy

./: .gitignore  AGENTS.md  README.md  fix_imports.py  lint.sh  patch_comments.patch  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.jules/: bolt.md  sentinel.md
examples/: basic_usage.py  export_usage_csv.py  monitor_balance.py
src/pypinergy/: __init__.py  _auth.py  client.py  exceptions.py  models.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_auth.py  test_client.py  test_logout_behavior.py  test_models.py
