[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypinergy"
version = "0.1.4"
description = "Python client library for the Pinergy smart meter API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "pypinergy contributors" }]
keywords = ["pinergy", "energy", "smart-meter", "electricity", "ireland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.24",
]

[project.urls]
Homepage = "https://github.com/irishsmurf/pypinergy"
Repository = "https://github.com/irishsmurf/pypinergy"
"Bug Tracker" = "https://github.com/irishsmurf/pypinergy/issues"
Changelog = "https://github.com/irishsmurf/pypinergy/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/pypinergy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pypinergy --cov-report=term-missing"
markers = [
    "network: hits the real Pinergy API (no credentials required, but needs network access)",
]

[tool.coverage.run]
source = ["src/pypinergy"]

[tool.coverage.paths]
source = ["src/pypinergy", "*/pypinergy"]
